# container-dev-env

./: .dockerignore  .editorconfig  .env.example  .gitignore  .shellcheckrc  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.node  Dockerfile.python  Makefile  README.md  checksums.sha256  docker-compose.yml  pyproject.toml  snake_game.py
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.opencode/: opencode.json
docker/: Dockerfile  Dockerfile.agent  Dockerfile.ide  Dockerfile.opencode  docker-compose.agent.yml  docker-compose.ide.yml  docker-compose.yml  entrypoint.sh  extensions.yaml  healthcheck.sh  memory-entrypoint.sh  memory.Dockerfile
docs/: _page-template.md  advanced-guide.md  architect-review_review_2026-01-23.md  architect_agent_review_2026-01-23.md  codex-review-2026-01-23.md  composition-rules.md  consolidated-improvement-backlog.md  gemini-review-2026-01-23.md  getting-started.md  glossary.md  image-verification.md  navigation.md  pre-existing-failures.md  secrets-guide.md  security-auditor_review_2026-01-23.md  security-guidance.md  spec-driven-development-pipeline.md  test-matrix.md  tool-compatibility.md  volume-architecture.md
examples/: .env.example  Dockerfile.go  Dockerfile.rust  README.md  docker-compose-examples.yml
prds/: 001-prd-container-base.md  002-prd-dotfile-management.md  003-prd-secret-injection.md  004-prd-volume-architecture.md  005-ard-terminal-ai-agent.md  005-prd-terminal-ai-agent.md  005-sec-terminal-ai-agent.md  006-ard-agentic-assistant.md  006-prd-agentic-assistant-orig.md  006-prd-agentic-assistant.md  006-sec-agentic-assistant.md  007-prd-git-worktree-compat.md  008-ard-containerized-ide.md  008-prd-containerized-ide.md  008-sec-containerized-ide.md  009-ard-ai-ide-extensions.md  009-prd-ai-ide-extensions.md  009-sec-ai-ide-extensions.md  010-ard-project-context-files.md  010-prd-project-context-files.md  010-sec-project-context-files.md  011-ard-mcp-integration.md  011-prd-mcp-integration.md  011-sec-mcp-integration.md  (+13 more)
(+557 files in other folders)
